[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Environment/platform.png" type="Texture" id=3]
[ext_resource path="res://Environment/background.png" type="Texture" id=4]
[ext_resource path="res://Environment/lava.png" type="Texture" id=5]
[ext_resource path="res://Scenes/MainGame.gd" type="Script" id=6]
[ext_resource path="res://Environment/Lava.gd" type="Script" id=7]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/NavigationMap.gd" type="Script" id=12]

[sub_resource type="NavigationPolygon" id=37]
vertices = PoolVector2Array( 721, 455, 1029, 435, 1124, 456, 1129, 614, 719, 485, 927, 411, 976, 410, 868, 416, 826, 401, 795, 369, 690, 440, 748, 177, 953, 140, 958, 170, 866, 325, 834, 322, 740, 212, 1123, 29, 1132, 140, 1032, 139, 1006, 126, 33, 145, -56, 141, -41, 18, 89, 122, 205, 363, -41, 372, -41, 198, 82, 198, 109, 189, 1015, 202, 1153, 196, 1155, 377, 1042, 376, 975, 331, 977, 197, 174, 599, 115, 625, 71, 642, 24, 648, -36, 625, -27, 450, 83, 446, 251, 444, 394, 511, 211, 609, 280, 436, 373, 484, 115, 127, 132, 146, 798, 335, 700, 235, 129, 169, 306, 160, 338, 230, 260, 363, 298, 208, 693, 513, 961, 599, 837, 644, 234, 647, 614, 524, 862, 618, 1024.79, 644.35, 898, 594, 491, 524, 431, 521, 378, 455, 302, 408, 392, 234, 400, 438, 292, 376, 638, 231, 636, 443, 449, 445, 464, 225, 566, 224, 289, 179, 350, 158, 385, 180, 977, 123, 691, 164, 718, 164, 656, 178 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 5, 6, 1, 0, 7 ), PoolIntArray( 8, 7, 0 ), PoolIntArray( 9, 8, 0, 10 ), PoolIntArray( 11, 12, 13, 14, 15, 16 ), PoolIntArray( 17, 18, 19, 20 ), PoolIntArray( 21, 22, 23, 24 ), PoolIntArray( 25, 26, 27, 28 ), PoolIntArray( 25, 28, 29 ), PoolIntArray( 30, 31, 32, 33, 34 ), PoolIntArray( 35, 30, 34, 14 ), PoolIntArray( 36, 37, 38, 39, 40, 41, 42, 43 ), PoolIntArray( 44, 45, 36, 43, 46, 47 ), PoolIntArray( 24, 23, 17, 48 ), PoolIntArray( 49, 48, 17 ), PoolIntArray( 13, 35, 14 ), PoolIntArray( 16, 15, 50, 51 ), PoolIntArray( 52, 49, 17, 53 ), PoolIntArray( 54, 55, 25, 29, 52, 56 ), PoolIntArray( 57, 4, 3, 58 ), PoolIntArray( 59, 60, 45, 61, 57, 62 ), PoolIntArray( 3, 63, 58 ), PoolIntArray( 57, 58, 64 ), PoolIntArray( 57, 64, 62 ), PoolIntArray( 65, 61, 45 ), PoolIntArray( 66, 65, 45 ), PoolIntArray( 44, 66, 45 ), PoolIntArray( 67, 47, 46, 68 ), PoolIntArray( 69, 70, 67, 68, 71, 54 ), PoolIntArray( 72, 51, 50, 9, 10, 73, 74 ), PoolIntArray( 69, 75, 76, 72, 74, 70 ), PoolIntArray( 54, 71, 55 ), PoolIntArray( 77, 56, 52 ), PoolIntArray( 53, 77, 52 ), PoolIntArray( 78, 53, 17 ), PoolIntArray( 79, 78, 17, 80 ), PoolIntArray( 17, 20, 80 ), PoolIntArray( 79, 80, 12, 81 ), PoolIntArray( 12, 11, 82 ), PoolIntArray( 81, 83, 79 ), PoolIntArray( 81, 12, 82 ) ]
outlines = [ PoolVector2Array( 1153, 196, 1155, 377, 1042, 376, 975, 331, 866, 325, 834, 322, 798, 335, 795, 369, 826, 401, 868, 416, 927, 411, 976, 410, 1029, 435, 1124, 456, 1129, 614, 1024.79, 644.35, 961, 599, 898, 594, 862, 618, 837, 644, 234, 647, 211, 609, 174, 599, 115, 625, 71, 642, 24, 648, -36, 625, -27, 450, 83, 446, 251, 444, 280, 436, 302, 408, 292, 376, 260, 363, 205, 363, -41, 372, -41, 198, 82, 198, 109, 189, 129, 169, 132, 146, 115, 127, 89, 122, 33, 145, -56, 141, -41, 18, 1123, 29, 1132, 140, 1032, 139, 1006, 126, 977, 123, 953, 140, 958, 170, 977, 197, 1015, 202 ), PoolVector2Array( 289, 179, 306, 160, 350, 158, 385, 180, 656, 178, 691, 164, 718, 164, 748, 177, 740, 212, 700, 235, 638, 231, 566, 224, 464, 225, 392, 234, 338, 230, 298, 208 ), PoolVector2Array( 449, 445, 636, 443, 690, 440, 721, 455, 719, 485, 693, 513, 614, 524, 491, 524, 431, 521, 394, 511, 373, 484, 378, 455, 400, 438 ) ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 592.5, 56 )

[node name="MainGame" type="Node2D"]
script = ExtResource( 6 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 541, 363 )
scale = Vector2( 9.0858, 12.76 )
texture = ExtResource( 4 )

[node name="Player" parent="." groups=["player"] instance=ExtResource( 2 )]
position = Vector2( 536, 596 )

[node name="NavigationMap" type="Navigation2D" parent="."]
script = ExtResource( 12 )
minimum_spawn_time = 4
maximum_spawn_time = 8
enemy_scene = ExtResource( 9 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="NavigationMap"]
navpoly = SubResource( 37 )

[node name="SpawnTimer" type="Timer" parent="NavigationMap"]

[node name="Spawn1" type="Node2D" parent="NavigationMap"]
position = Vector2( -30, 257 )

[node name="Spawn2" type="Node2D" parent="NavigationMap"]
position = Vector2( 1117, 244 )

[node name="Spawn3" type="Node2D" parent="NavigationMap"]
position = Vector2( -21, 546 )

[node name="Spawn4" type="Node2D" parent="NavigationMap"]
position = Vector2( 1102, 535 )

[node name="Level" type="Node2D" parent="."]
position = Vector2( 540, 590 )

[node name="Platforms" type="Node2D" parent="Level"]

[node name="MainFloor" type="StaticBody2D" parent="Level/Platforms" groups=["wall"]]
position = Vector2( 0, 59 )
scale = Vector2( 5.8, 0.5 )
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Level/Platforms/MainFloor"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/MainFloor"]
shape = SubResource( 7 )

[node name="MainCeiling" type="StaticBody2D" parent="Level/Platforms" groups=["wall"]]
position = Vector2( -19, -610 )
scale = Vector2( 12.5868, 0.5 )
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Level/Platforms/MainCeiling"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/MainCeiling"]
shape = SubResource( 7 )

[node name="SidePlatformLeft" type="StaticBody2D" parent="Level/Platforms" groups=["wall"]]
position = Vector2( -450, -216 )
scale = Vector2( 2.6, 0.5 )
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Level/Platforms/SidePlatformLeft"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/SidePlatformLeft"]
shape = SubResource( 7 )

[node name="SidePlatformRight" type="StaticBody2D" parent="Level/Platforms" groups=["wall"]]
position = Vector2( 391, -249 )
scale = Vector2( 1.4, 0.5 )
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Level/Platforms/SidePlatformRight"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/SidePlatformRight"]
shape = SubResource( 7 )

[node name="SidePlatformRight2" type="StaticBody2D" parent="Level/Platforms" groups=["wall"]]
position = Vector2( 561, -216 )
scale = Vector2( 1.4, 0.5 )
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Level/Platforms/SidePlatformRight2"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/SidePlatformRight2"]
shape = SubResource( 7 )

[node name="TopPlatform" type="StaticBody2D" parent="Level/Platforms" groups=["wall"]]
position = Vector2( -32, -410 )
scale = Vector2( 2.68, 0.5 )
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Level/Platforms/TopPlatform"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/TopPlatform"]
shape = SubResource( 7 )

[node name="MiddlePlatform" type="StaticBody2D" parent="Level/Platforms" groups=["wall"]]
position = Vector2( 0, -135 )
scale = Vector2( 2, 0.5 )
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Level/Platforms/MiddlePlatform"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/MiddlePlatform"]
shape = SubResource( 7 )

[node name="TopPlatformLeft" type="StaticBody2D" parent="Level/Platforms" groups=["wall"]]
position = Vector2( -634, -450 )
scale = Vector2( 2.68, 0.5 )
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Level/Platforms/TopPlatformLeft"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/TopPlatformLeft"]
shape = SubResource( 7 )

[node name="TopPlatformRight" type="StaticBody2D" parent="Level/Platforms" groups=["wall"]]
position = Vector2( 634, -450 )
scale = Vector2( 2.68, 0.5 )
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Level/Platforms/TopPlatformRight"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Platforms/TopPlatformRight"]
shape = SubResource( 7 )

[node name="Lava" type="Node2D" parent="Level"]
position = Vector2( 0, 128 )

[node name="Sprite" type="Sprite" parent="Level/Lava"]
position = Vector2( 0, 37 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Level/Lava" groups=["lava"]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Lava/Area2D"]
position = Vector2( 3.5, 48 )
shape = SubResource( 18 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 36, 645 )

[connection signal="spawn_enemy" from="NavigationMap" to="Level/Lava/Area2D" method="_on_NavigationMap_spawn_enemy"]
[connection signal="timeout" from="NavigationMap/SpawnTimer" to="NavigationMap" method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="Level/Lava/Area2D" to="Player" method="_on_Area2D_body_entered"]
